[package]
name = "tradegui"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
eframe = "0.22"
egui = "0.22"
egui_extras = "0.22"
ehttp = "0.2.0"
env_logger = "0.10.0"
poll-promise = "0.2.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
