[package]
name = "space_traders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
